# devenv

./: .devenv.yaml  CLAUDE.md  Makefile  README.md  convert-project.sh  delete.txt  eslint.config.js  init-project.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  remove_files.txt  remove_node_packages.txt
cfg/: common.mk  devenv.mk  docs.mk  eslint.config.base.js  node_root.mk  python.mk
cfg/ci/: ci.mk
cfg/common/: common.mk
cfg/django/: django.mk
cfg/docker/: docker.mk
cfg/frontend/: frontend.mk
cfg/node_root/: node_root.mk
cfg/python/: python.mk
copy/frontend/cfg/: frontend.mk
copy/gha_std/cfg/: gha_std.mk
copy/node_root/cfg/: eslint.config.base.js
devenv/: __init__.py
init/: Makefile  mkdocs.yml
init/common/: .devenv.yaml  Makefile  package.json
init/node_root/: package.json
init/python/: pyproject.toml
merge/common/: .prettierignore
merge/node_root/: package.json
merge/python/: pyproject-template.toml
root/ci/.github/workflows/: ci.yml
scripts/: _devenv_common.py  add-makefiles.sh  add_makefiles.py  all-features.sh  convert-project.sh  copy-new-files.sh  copy_files.py  delete-files.sh  init-project.sh  merge-dotfiles.sh  merge_dotfiles.py  merge_package_json.py  merge_toml.py  merge_yaml.py  parse-config.sh  update-devenv.sh  update_devenv.py
templates/: mkdocs.yml  package.json  pyproject-template.toml
templates/ci/: compose.yaml
templates/common/: .prettierignore  package.json
templates/node/: package.json
templates/node_root/: package.json
templates/python/: pyproject-template.toml
