[project]
classifiers = []
dependencies = []
description = "."
keywords = []
license = "GPL-3.0-only"
name = "x"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
News = "https://.readthedocs.io/NEWS/"
Documentation = "https://.readthedocs.io"
"Docker Image" = "https://hub.docker.com/r/ajslater/"
Issues = "https://github.com/ajslater//issues"
Source = "https://github.com/ajslater/"

[project.scripts]
x = "x.run:main"
